--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,8 @@
 /* *********** TAG *********** */
 
 body {
+    width: 800px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
